# name: test_query_all_documents[date-None-None-2019-02-22]
  <class 'dict'> {
    'allDocuments': <class 'dict'> {
      'edges': <class 'list'> [
        <class 'dict'> {
          'node': <class 'dict'> {
            'answers': <class 'dict'> {
              'edges': <class 'list'> [
                <class 'dict'> {
                  'node': <class 'dict'> {
                    '__typename': 'DateAnswer',
                    'date_value': '2019-02-22',
                    'question': <class 'dict'> {
                      'label': 'Taylor Williams',
                      'slug': 'suggest-adult-allow',
                    },
                  },
                },
              ],
              'totalCount': 1,
            },
            'createdByUser': 'a18c653a-d278-47f1-8d6e-9ced73aeeea4',
          },
        },
      ],
      'totalCount': 1,
    },
  }
---
# name: test_query_all_documents[dynamic_choice-MyDataSource-5.5-None]
  <class 'dict'> {
    'allDocuments': <class 'dict'> {
      'edges': <class 'list'> [
        <class 'dict'> {
          'node': <class 'dict'> {
            'answers': <class 'dict'> {
              'edges': <class 'list'> [
                <class 'dict'> {
                  'node': <class 'dict'> {
                    '__typename': 'StringAnswer',
                    'question': <class 'dict'> {
                      'label': 'Taylor Williams',
                      'slug': 'suggest-adult-allow',
                    },
                    'string_value': '5.5',
                  },
                },
              ],
              'totalCount': 1,
            },
            'createdByUser': 'a18c653a-d278-47f1-8d6e-9ced73aeeea4',
          },
        },
      ],
      'totalCount': 1,
    },
  }
---
# name: test_query_all_documents[dynamic_multiple_choice-MyDataSource-answer__value9-None]
  <class 'dict'> {
    'allDocuments': <class 'dict'> {
      'edges': <class 'list'> [
        <class 'dict'> {
          'node': <class 'dict'> {
            'answers': <class 'dict'> {
              'edges': <class 'list'> [
                <class 'dict'> {
                  'node': <class 'dict'> {
                    '__typename': 'ListAnswer',
                    'list_value': <class 'list'> [
                      '5.5',
                    ],
                    'question': <class 'dict'> {
                      'label': 'Taylor Williams',
                      'slug': 'suggest-adult-allow',
                    },
                  },
                },
              ],
              'totalCount': 1,
            },
            'createdByUser': 'a18c653a-d278-47f1-8d6e-9ced73aeeea4',
          },
        },
      ],
      'totalCount': 1,
    },
  }
---
# name: test_query_all_documents[file-None-some-file.pdf-None]
  <class 'dict'> {
    'allDocuments': <class 'dict'> {
      'edges': <class 'list'> [
        <class 'dict'> {
          'node': <class 'dict'> {
            'answers': <class 'dict'> {
              'edges': <class 'list'> [
                <class 'dict'> {
                  'node': <class 'dict'> {
                    '__typename': 'FileAnswer',
                    'fileValue': <class 'dict'> {
                      'downloadUrl': 'http://minio/download-url/09c697fb-fd0a-4345-bb9c-99df350b0cdb_some-file.pdf',
                      'metadata': <class 'dict'> {
                        'bucket_name': 'caluma-media',
                        'content_type': 'application/pdf',
                        'etag': '5d41402abc4b2a76b9719d911017c592',
                        'last_modified': '2021-03-05T15:24:33+00:00',
                        'metadata': <class 'dict'> {
                          'Accept-Ranges': 'bytes',
                          'Content-Length': '5',
                          'Content-Security-Policy': 'block-all-mixed-content',
                          'Content-Type': 'binary/octet-stream',
                          'Date': 'Fri, 05 Mar 2021 15:25:15 GMT',
                          'ETag': '"5d41402abc4b2a76b9719d911017c592"',
                          'Last-Modified': 'Fri, 05 Mar 2021 15:24:33 GMT',
                          'Server': 'MinIO',
                          'Vary': 'Origin',
                          'X-Amz-Request-Id': '16697BAAD69D2214',
                          'X-Xss-Protection': '1; mode=block',
                        },
                        'size': 8200,
                      },
                      'name': 'some-file.pdf',
                    },
                    'question': <class 'dict'> {
                      'label': 'Taylor Williams',
                      'slug': 'suggest-adult-allow',
                    },
                  },
                },
              ],
              'totalCount': 1,
            },
            'createdByUser': 'a18c653a-d278-47f1-8d6e-9ced73aeeea4',
          },
        },
      ],
      'totalCount': 1,
    },
  }
---
# name: test_query_all_documents[file-None-some-other-file.pdf-None]
  <class 'dict'> {
    'allDocuments': <class 'dict'> {
      'edges': <class 'list'> [
        <class 'dict'> {
          'node': <class 'dict'> {
            'answers': <class 'dict'> {
              'edges': <class 'list'> [
                <class 'dict'> {
                  'node': <class 'dict'> {
                    '__typename': 'FileAnswer',
                    'fileValue': <class 'dict'> {
                      'downloadUrl': 'http://minio/download-url/09c697fb-fd0a-4345-bb9c-99df350b0cdb_some-other-file.pdf',
                      'metadata': <class 'dict'> {
                        'bucket_name': 'caluma-media',
                        'content_type': 'application/pdf',
                        'etag': '5d41402abc4b2a76b9719d911017c592',
                        'last_modified': '2021-03-05T15:24:33+00:00',
                        'metadata': <class 'dict'> {
                          'Accept-Ranges': 'bytes',
                          'Content-Length': '5',
                          'Content-Security-Policy': 'block-all-mixed-content',
                          'Content-Type': 'binary/octet-stream',
                          'Date': 'Fri, 05 Mar 2021 15:25:15 GMT',
                          'ETag': '"5d41402abc4b2a76b9719d911017c592"',
                          'Last-Modified': 'Fri, 05 Mar 2021 15:24:33 GMT',
                          'Server': 'MinIO',
                          'Vary': 'Origin',
                          'X-Amz-Request-Id': '16697BAAD69D2214',
                          'X-Xss-Protection': '1; mode=block',
                        },
                        'size': 8200,
                      },
                      'name': 'some-other-file.pdf',
                    },
                    'question': <class 'dict'> {
                      'label': 'Taylor Williams',
                      'slug': 'suggest-adult-allow',
                    },
                  },
                },
              ],
              'totalCount': 1,
            },
            'createdByUser': 'a18c653a-d278-47f1-8d6e-9ced73aeeea4',
          },
        },
      ],
      'totalCount': 1,
    },
  }
---
# name: test_query_all_documents[float-None-2.1-None]
  <class 'dict'> {
    'allDocuments': <class 'dict'> {
      'edges': <class 'list'> [
        <class 'dict'> {
          'node': <class 'dict'> {
            'answers': <class 'dict'> {
              'edges': <class 'list'> [
                <class 'dict'> {
                  'node': <class 'dict'> {
                    '__typename': 'FloatAnswer',
                    'float_value': 2.1,
                    'question': <class 'dict'> {
                      'label': 'Taylor Williams',
                      'slug': 'suggest-adult-allow',
                    },
                  },
                },
              ],
              'totalCount': 1,
            },
            'createdByUser': 'a18c653a-d278-47f1-8d6e-9ced73aeeea4',
          },
        },
      ],
      'totalCount': 1,
    },
  }
---
# name: test_query_all_documents[integer-None-1-None]
  <class 'dict'> {
    'allDocuments': <class 'dict'> {
      'edges': <class 'list'> [
        <class 'dict'> {
          'node': <class 'dict'> {
            'answers': <class 'dict'> {
              'edges': <class 'list'> [
                <class 'dict'> {
                  'node': <class 'dict'> {
                    '__typename': 'IntegerAnswer',
                    'integer_value': 1,
                    'question': <class 'dict'> {
                      'label': 'Taylor Williams',
                      'slug': 'suggest-adult-allow',
                    },
                  },
                },
              ],
              'totalCount': 1,
            },
            'createdByUser': 'a18c653a-d278-47f1-8d6e-9ced73aeeea4',
          },
        },
      ],
      'totalCount': 1,
    },
  }
---
# name: test_query_all_documents[multiple_choice-None-answer__value3-None]
  <class 'dict'> {
    'allDocuments': <class 'dict'> {
      'edges': <class 'list'> [
        <class 'dict'> {
          'node': <class 'dict'> {
            'answers': <class 'dict'> {
              'edges': <class 'list'> [
                <class 'dict'> {
                  'node': <class 'dict'> {
                    '__typename': 'ListAnswer',
                    'list_value': <class 'list'> [
                      'somevalue',
                      'anothervalue',
                    ],
                    'question': <class 'dict'> {
                      'label': 'Taylor Williams',
                      'slug': 'suggest-adult-allow',
                    },
                  },
                },
              ],
              'totalCount': 1,
            },
            'createdByUser': 'a18c653a-d278-47f1-8d6e-9ced73aeeea4',
          },
        },
      ],
      'totalCount': 1,
    },
  }
---
# name: test_query_all_documents[table-None-None-None]
  <class 'dict'> {
    'allDocuments': <class 'dict'> {
      'edges': <class 'list'> [
        <class 'dict'> {
          'node': <class 'dict'> {
            'answers': <class 'dict'> {
              'edges': <class 'list'> [
                <class 'dict'> {
                  'node': <class 'dict'> {
                    '__typename': 'TableAnswer',
                    'question': <class 'dict'> {
                      'label': 'Taylor Williams',
                      'slug': 'suggest-adult-allow',
                    },
                    'table_value': <class 'list'> [
                      <class 'dict'> {
                        'form': <class 'dict'> {
                          'slug': 'environmental-ten',
                        },
                      },
                    ],
                  },
                },
              ],
              'totalCount': 1,
            },
            'createdByUser': '872d1b6f-790c-473c-b5e9-2e714d607695',
          },
        },
      ],
      'totalCount': 1,
    },
  }
---
# name: test_query_all_documents[text-None-somevalue-None]
  <class 'dict'> {
    'allDocuments': <class 'dict'> {
      'edges': <class 'list'> [
        <class 'dict'> {
          'node': <class 'dict'> {
            'answers': <class 'dict'> {
              'edges': <class 'list'> [
                <class 'dict'> {
                  'node': <class 'dict'> {
                    '__typename': 'StringAnswer',
                    'question': <class 'dict'> {
                      'label': 'Taylor Williams',
                      'slug': 'suggest-adult-allow',
                    },
                    'string_value': 'somevalue',
                  },
                },
              ],
              'totalCount': 1,
            },
            'createdByUser': 'a18c653a-d278-47f1-8d6e-9ced73aeeea4',
          },
        },
      ],
      'totalCount': 1,
    },
  }
---
